<?xml version="1.0" encoding="utf-8"?>

<!--
    *   FILE        :   activity_main.xml
    *   PROJECT     :   assignmentApp
    *   PROGRAMMER  :   Oloruntoba Samuel Lagunju
    *                   Gabriel Stewart
    *   DATE        :   February 04th 2019
    *   DESCRIPTION :   This is a file that supports code for the layout of the
    *                   main activity of the app.
-->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddingNewAssignmentActivity">


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="395dp"
        android:layout_height="57dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="617dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/CancelAssignmentBtn"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:onClick="saveOrCancel"
            android:text="@android:string/cancel"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
            app:layout_constraintTop_toTopOf="@+id/linearLayout2" />

        <Button
            android:id="@+id/SaveAssignmentBtn"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:onClick="saveOrCancel"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
            app:layout_constraintStart_toStartOf="@+id/linearLayout2"
            app:layout_constraintTop_toTopOf="@+id/linearLayout2" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="386dp"
        android:layout_height="554dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">


        <EditText
            android:id="@+id/assignmentField"
            android:layout_width="305dp"
            android:layout_height="63dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="81dp"
            android:layout_marginRight="81dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/assignmentNameLabel"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/dueDateField"
            android:layout_width="305dp"
            android:layout_height="63dp"
            android:layout_below="@+id/assignmentField"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="37dp"
            android:layout_marginEnd="81dp"
            android:layout_marginRight="81dp"
            android:ems="10"
            android:hint="@string/dueDateLabel"
            android:inputType="textPersonName" />


        <RadioGroup
            android:id="@+id/PriorityRadioBtns"
            android:layout_width="318dp"
            android:layout_height="121dp"
            android:layout_above="@+id/extraNoteWidget"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="68dp"
            android:layout_marginRight="68dp"
            android:layout_marginBottom="42dp">


            <RadioButton
                android:id="@+id/firstLevelOfPriority"
                android:layout_width="149dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/priority_level_1" />

            <RadioButton
                android:id="@+id/secondLevelOfPriority"
                android:layout_width="149dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/priority_level_2" />


            <RadioButton
                android:id="@+id/thirdLevelOfPriority"
                android:layout_width="149dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/priority_level_3" />
        </RadioGroup>

        <EditText
            android:id="@+id/extraNoteWidget"
            android:layout_width="277dp"
            android:layout_height="53dp"

            android:layout_alignParentBottom="true"
            android:layout_marginBottom="77dp"
            android:ems="10"
            android:hint="@string/add_note_label"
            android:inputType="textMultiLine" />

        <TextView
            android:id="@+id/priorityLabel"
            android:layout_width="291dp"
            android:layout_height="42dp"
            android:layout_above="@+id/PriorityRadioBtns"
            android:layout_below="@+id/dueDateField"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="95dp"
            android:layout_marginBottom="20dp"
            android:text="Priority Level"
            android:textColor="@android:color/black"
            android:textSize="24sp" />


    </RelativeLayout>

</android.support.constraint.ConstraintLayout>